<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/dialog_top_line" 
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="@color/green"/>
    
    <TextView
        android:id="@+id/dialog_confirm_message" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_del_music"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gainsboro"/>

    <CheckBox
        android:id="@+id/diaolg_other_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/meanwhile_del_localfile"
        android:textSize="14sp"
        android:textColor="@color/darkgrey"
        style="@style/customCheckBox"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
   
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="@color/gainsboro"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">
        
        <Button
            android:id="@+id/dialog_btn_confirm" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sel_button_confirm"/>
        
        <Button
            android:id="@+id/dialog_btn_cancel" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/sel_button_cancel"/> 
            
    </LinearLayout>

</LinearLayout>
