<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dialog_select_music_titleLayout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_select_music_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_select_music_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_select_music_msg"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"         
        android:drawablePadding="5dp"/>

    <View
        android:id="@+id/dialog_select_music_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgrey" />

    <LinearLayout
        android:id="@+id/dialog_select_music_bottom"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/dialog_select_music_leftLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_dialog_btn"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/lightgrey" />

        <LinearLayout
            android:id="@+id/dialog_select_music_rightLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_dialog_btn"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>