<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightgreen" >

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_launcher"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/app_version"
        android:textColor="@color/darkgrey"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/about_listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/about_app_version"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:listSelector="@null"
        android:divider="@drawable/line_h"
        android:scrollbars="none"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/about_copyright_msg"
        android:textColor="@color/darkgrey"
        android:textSize="12sp" />

</RelativeLayout>